--- a/NCAA Predictions.ipynb
+++ b/NCAA Predictions.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import re\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from pandas.stats.api import ols\n",
     "from subprocess import check_output"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -302,13 +302,17 @@
       "97712    2008       1   1205      69   1105      55    N      0\n",
       "97713    2008       1   1246      67   1146      40    H      0\n",
       "97714    2008       1   1272      80   1350      63    H      0\n",
-      "97715    2008       1   1404      66   1263      62    N      0\n"
+      "97715    2008       1   1404      66   1263      62    N      0\n",
+      "Number of games in 2008: 5163\n"
      ]
     }
    ],
    "source": [
     "RegPost2008 = RegularSeasonCompact[RegularSeasonCompact['Season'] >= 2008]\n",
-    "print(RegPost2008.head(6))"
+    "print(RegPost2008.head(6))\n",
+    "#print(RegPost200)\n",
+    "print(\"Number of games in 2008:\", len(RegPost2008[RegPost2008['Season'] == 2008]))\n",
+    "RegGames2008 = RegPost2008[RegPost2008['Season'] == 2008]"
    ]
   },
   {
@@ -365,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -374,19 +378,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1464\n",
       "create a list to store all rankings\n",
-      "trueskill.Rating(mu=25.000, sigma=8.333)\n"
+      "   Team_Id    Team_Name                                    Rating  \\\n",
+      "0     1101  Abilene Chr  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "1     1102    Air Force  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "2     1103        Akron  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "3     1104      Alabama  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "4     1105  Alabama A&M  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "5     1106   Alabama St  trueskill.Rating(mu=25.000, sigma=8.333)   \n",
+      "\n",
+      "                                 Rating2008  \n",
+      "0  trueskill.Rating(mu=25.000, sigma=8.333)  \n",
+      "1  trueskill.Rating(mu=25.000, sigma=8.333)  \n",
+      "2  trueskill.Rating(mu=25.000, sigma=8.333)  \n",
+      "3  trueskill.Rating(mu=25.000, sigma=8.333)  \n",
+      "4  trueskill.Rating(mu=25.000, sigma=8.333)  \n",
+      "5  trueskill.Rating(mu=25.000, sigma=8.333)  \n"
      ]
     }
    ],
    "source": [
     "# first try 2008 season\n",
-    "# instantiate ratings for all teams\n",
-    "print(Teams['Team_Id'].max())\n",
+    "# instantiate ratings for all teams and add it to the dataframe\n",
     "print('create a list to store all rankings')\n",
-    "TeamRatings = [Rating() for i in range(Teams['Team_Id'].max()+1)]\n",
-    "print(TeamRatings[0])"
+    "TeamRatings2008 = np.asarray([Rating() for i in range(len(Teams))])\n",
+    "#print (TeamRatings)\n",
+    "#print(TeamRatings2008)\n",
+    "Teams['Rating2008'] = TeamRatings2008\n",
+    "print(Teams.head(6))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-68-45080fc159cb>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-68-45080fc159cb>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    for i in range(len(RegGames2008))\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for each game in 2008, apply trueskill and update rating\n",
+    "#for i in range(len(RegGames2008)):\n",
+    "#    win, lose = rate_1vs1\n"
    ]
   },
   {
